fix: z-index

--- a/assets/css/cookie-code-style.css
+++ b/assets/css/cookie-code-style.css
@@ -26,6 +26,7 @@
   display: none;
   position: relative;
   font-family: sans-serif;
+  z-index: 10;
 }
 
 .cookie-code-form.active {
